# kotlin-tree-sitter

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CONTRIBUTING.md  dependabot.yml  detekt.yml
.github/scripts/: build-jni.ps1  build-jni.sh
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml
gradle/: libs.versions.toml
ktreesitter/: .clang-format  CMakeLists.txt  README.md  build.gradle.kts  consumer-rules.pro  gradle.lockfile
ktreesitter-dsl/: README.md  build.gradle.kts
ktreesitter-dsl/src/jsMain/kotlin/io/github/treesitter/ktreesitter/dsl/: DSL.kt  Grammar.kt  Rule.kt
ktreesitter-dsl/src/jsTest/kotlin/io/github/treesitter/ktreesitter/dsl/: GrammarTest.kt
ktreesitter-plugin/: README.md  build.gradle.kts
ktreesitter-plugin/src/main/java/io/github/treesitter/ktreesitter/plugin/: GrammarExtension.java  GrammarFilesTask.java  GrammarPlugin.java
ktreesitter-plugin/src/main/resources/: CMakeLists.txt.in  android.kt.in  common.kt.in  interop.def.in  jni.c.in  jvm.kt.in  native.kt.in
ktreesitter/src/androidInstrumentedTest/kotlin/io/github/treesitter/ktreesitter/: LanguageTest.kt  LookaheadIteratorTest.kt  NodeTest.kt  ParserTest.kt  QueryTest.kt  TreeCursorTest.kt  TreeTest.kt
ktreesitter/src/androidInstrumentedTest/resources/: kotest.properties
ktreesitter/src/androidMain/kotlin/io/github/treesitter/ktreesitter/: InputEncoding.kt  Language.kt  LookaheadIterator.kt  Node.kt  Parser.kt  Query.kt  QueryCursor.kt  RefCleaner.kt  Tree.kt  TreeCursor.kt
ktreesitter/src/commonMain/kotlin/io/github/treesitter/ktreesitter/: CaptureQuantifier.kt  InputEdit.kt  InputEncoding.kt  Language.kt  LookaheadIterator.kt  Node.kt  Parser.kt  Point.kt  Query.kt  QueryCapture.kt  QueryCursor.kt  QueryError.kt  QueryMatch.kt  QueryPredicate.kt  QueryPredicateArg.kt  Range.kt  Tree.kt  TreeCursor.kt  TreeSitter.kt
ktreesitter/src/commonTest/kotlin/io/github/treesitter/ktreesitter/: LanguageTest.kt  LookaheadIteratorTest.kt  NodeTest.kt  ParserTest.kt  QueryCursorTest.kt  QueryTest.kt  TreeCursorTest.kt  TreeTest.kt
ktreesitter/src/jni/: language.c  lookahead_iterator.c  module.c  node.c  parser.c  query.c  query_cursor.c  tree.c  tree_cursor.c  utils.h
ktreesitter/src/jvmMain/kotlin/io/github/treesitter/ktreesitter/: Language.kt  LookaheadIterator.kt  NativeUtils.kt  Node.kt  Parser.kt  Query.kt  QueryCursor.kt  RefCleaner.kt  Tree.kt  TreeCursor.kt
ktreesitter/src/nativeInterop/cinterop/: treesitter.def
ktreesitter/src/nativeMain/kotlin/io/github/treesitter/ktreesitter/: InputEncoding.kt  Language.kt  LookaheadIterator.kt  Node.kt  Parser.kt  Query.kt  QueryCursor.kt  Tree.kt  TreeCursor.kt  TreeSitter.kt  Utils.kt
languages/java/: CMakeLists.txt  build.gradle.kts
languages/java/src/androidMain/kotlin/io/github/treesitter/ktreesitter/java/: TreeSitterJava.kt
languages/java/src/commonMain/kotlin/io/github/treesitter/ktreesitter/java/: TreeSitterJava.kt  binding.kt
languages/java/src/jni/: binding.c
languages/java/src/jvmMain/kotlin/io/github/treesitter/ktreesitter/java/: TreeSitterJava.kt
languages/java/src/nativeInterop/cinterop/: parser.def
languages/java/src/nativeMain/kotlin/io/github/treesitter/ktreesitter/java/: TreeSitterJava.kt  binding.kt
